[gd_scene load_steps=15 format=2]

[ext_resource path="res://Cenas/Personagem.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cenas/CaixaDialogo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Elementos/Visuais/Fontes/ComicSansMS/comic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Codigos/TelaInternetEncerramentoFase1.gd" type="Script" id=4]
[ext_resource path="res://Cenas/FonteLucidaConsole.tscn" type="PackedScene" id=5]
[ext_resource path="res://Elementos/Visuais/Fundo/Rede.jpg" type="Texture" id=6]
[ext_resource path="res://Cenas/FonteComicSans.tscn" type="PackedScene" id=7]
[ext_resource path="res://Elementos/Visuais/Icones/Monitor.svg" type="Texture" id=8]
[ext_resource path="res://Cenas/FonteDetalhadaComicSans.tscn" type="PackedScene" id=9]
[ext_resource path="res://Elementos/Visuais/Personagens/Robo/Robo-1.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
border_width_left = 5
border_width_right = 5
border_color = Color( 0, 0, 0, 1 )

[node name="TelaInternetEncerramentoFase2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fundo" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.607843, 1, 0.713726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FundoTextura" type="Sprite" parent="."]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
self_modulate = Color( 0.607843, 1, 0.713726, 1 )
position = Vector2( -384, -688 )
texture = ExtResource( 6 )
centered = false

[node name="Tela" type="CenterContainer" parent="."]
anchor_left = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -330.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Centro" type="CenterContainer" parent="Tela"]
margin_left = 768.0
margin_top = 375.0
margin_right = 768.0
margin_bottom = 375.0
mouse_filter = 2

[node name="Panel" type="Sprite" parent="Tela/Centro"]
self_modulate = Color( 0.654902, 1, 0.635294, 1 )
texture = ExtResource( 8 )

[node name="Lista" type="VBoxContainer" parent="Tela/Centro/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -549.0
margin_top = -356.0
margin_right = -549.0
margin_bottom = -356.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texto" parent="Tela/Centro/Panel/Lista" instance=ExtResource( 5 )]
self_modulate = Color( 0.00784314, 0.333333, 0, 1 )
margin_right = 1098.0
margin_bottom = 151.0
text = "Parab√©ns"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="Tela/Centro/Panel/Lista"]
margin_top = 155.0
margin_right = 1098.0
margin_bottom = 159.0
custom_styles/separator = SubResource( 1 )

[node name="MargemSuperior" type="MarginContainer" parent="Tela/Centro/Panel/Lista"]
margin_top = 163.0
margin_right = 1098.0
margin_bottom = 712.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 0
custom_constants/margin_left = 20
custom_constants/margin_bottom = 10

[node name="Coluna" type="HBoxContainer" parent="Tela/Centro/Panel/Lista/MargemSuperior"]
margin_left = 20.0
margin_right = 1078.0
margin_bottom = 539.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ListaErro" type="VBoxContainer" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna"]
margin_right = 510.0
margin_bottom = 539.0
size_flags_horizontal = 3

[node name="Erros" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaErro" instance=ExtResource( 7 )]
margin_right = 510.0
margin_bottom = 85.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TextoErros"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaErro"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 89.0
margin_right = 510.0
margin_bottom = 139.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coluna" type="HBoxContainer" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaErro"]
margin_top = 143.0
margin_right = 510.0
margin_bottom = 228.0

[node name="Atual" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaErro/Coluna" instance=ExtResource( 7 )]
margin_right = 319.0
margin_bottom = 85.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TextoAtual"

[node name="Valor" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaErro/Coluna" instance=ExtResource( 7 )]
margin_left = 323.0
margin_right = 510.0
margin_bottom = 85.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="ColunaMenor" type="HBoxContainer" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaErro"]
margin_top = 232.0
margin_right = 510.0
margin_bottom = 317.0

[node name="Menor" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaErro/ColunaMenor" instance=ExtResource( 7 )]
margin_right = 347.0
margin_bottom = 85.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TextoMenor"

[node name="Valor" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaErro/ColunaMenor" instance=ExtResource( 7 )]
margin_left = 351.0
margin_right = 510.0
margin_bottom = 85.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Recorde" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaErro" instance=ExtResource( 9 )]
visible = false
margin_top = 321.0
margin_right = 510.0
margin_bottom = 421.0
rect_min_size = Vector2( 510, 100 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_text = "TextoRecorde"
text = "TextoRecorde"
scroll_active = false

[node name="Separador" type="VSeparator" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna"]
margin_left = 514.0
margin_right = 544.0
margin_bottom = 539.0
custom_styles/separator = SubResource( 4 )
custom_constants/separation = 30

[node name="ListaTempo" type="VBoxContainer" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna"]
margin_left = 548.0
margin_right = 1058.0
margin_bottom = 539.0
size_flags_horizontal = 3

[node name="Tempo" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaTempo" instance=ExtResource( 7 )]
margin_right = 510.0
margin_bottom = 85.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TextoTempo"
align = 1

[node name="HSeparator" type="HSeparator" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaTempo"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 89.0
margin_right = 510.0
margin_bottom = 139.0
custom_constants/separation = 50

[node name="Coluna" type="HBoxContainer" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaTempo"]
margin_top = 143.0
margin_right = 510.0
margin_bottom = 228.0

[node name="Atual" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaTempo/Coluna" instance=ExtResource( 7 )]
margin_right = 319.0
margin_bottom = 85.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TextoAtual"

[node name="Valor" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaTempo/Coluna" instance=ExtResource( 7 )]
margin_left = 323.0
margin_right = 510.0
margin_bottom = 85.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="ColunaMenor" type="HBoxContainer" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaTempo"]
margin_top = 232.0
margin_right = 510.0
margin_bottom = 317.0

[node name="Menor" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaTempo/ColunaMenor" instance=ExtResource( 7 )]
margin_right = 347.0
margin_bottom = 85.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TextoMenor"

[node name="Valor" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaTempo/ColunaMenor" instance=ExtResource( 7 )]
margin_left = 351.0
margin_right = 510.0
margin_bottom = 85.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"

[node name="Recorde" parent="Tela/Centro/Panel/Lista/MargemSuperior/Coluna/ListaTempo" instance=ExtResource( 9 )]
visible = false
margin_top = 321.0
margin_right = 510.0
margin_bottom = 421.0
rect_min_size = Vector2( 510, 100 )
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_text = "TextoRecorde"
text = "TextoRecorde"
scroll_active = false

[node name="Personagem" parent="." instance=ExtResource( 1 )]
texture = ExtResource( 10 )

[node name="CaixaDialogo" parent="." instance=ExtResource( 2 )]

[node name="Texto" parent="CaixaDialogo/Margem/Elementos/Campo/Margem" index="0"]
text = "Texto Apresentacao."

[node name="BotaoDireita" parent="CaixaDialogo/Margem/Elementos" index="2"]
ProximaCena = "res://Cenas/TelaInternet.tscn"
TrocarCena = true

[editable path="CaixaDialogo"]
[editable path="CaixaDialogo/Margem/Elementos/BotaoEsquerda"]
[editable path="CaixaDialogo/Margem/Elementos/BotaoDireita"]
